<resources>
    <string name="app_name">To-Do-List</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="emptyList">You have no tasks to do.</string>
    <string name="task_completed">Task completed</string>
    <string name="task_name">Task Name</string>
    <string name="description">Description</string>
    <string name="search">search</string>
    <string name="sort_by">Sort By</string>
    <string name="alphabetical_order">Title</string>
    <string name="newest">Newest Tasks</string>
    <string name="oldest">Oldest Tasks</string>
    <string name="delete_all">Delete All</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="pick_a_date">Pick a Date:</string>
    <string name="filter_by">Filter By</string>
</resources>