<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menu_search"
        android:title="@string/search"
        android:iconTint="@color/white"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom"
        app:actionViewClass="androidx.appcompat.widget.SearchView">
    </item>

        <item
            android:id="@+id/menu_sortBy"
            android:title="@string/sort_by">

            <menu>
        <item android:title="@string/alphabetical_order"
         android:id="@+id/alphabetical_order"/>
                <item android:title="@string/date_order"
                    android:id="@+id/date_order"/>
            </menu>
        </item>

<item
    android:id="@+id/menu_delete_all"
    android:title="@string/delete_all"
    app:showAsAction="never">
</item>
</menu>