<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundLight"
    android:fillViewport="false">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundLight"
        android:padding="24dp"
        tools:context=".fragment.update.UpdateFragment">

        <EditText
            android:id="@+id/current_title"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/custom_input"
            android:ems="10"
            android:hint="@string/task_name"
            android:inputType="textMultiLine"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.458"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/current_description"
            android:layout_width="0dp"
            android:layout_height="151dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/custom_input"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:paddingStart="24dp"
            android:paddingTop="24dp"
            android:paddingEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/current_title" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_a_date"
            app:layout_constraintBottom_toTopOf="@+id/current_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.067"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/current_description" />

        <Button
            android:id="@+id/current_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/current_description"
            tools:text="Wed Nov 14 11:56 EST 2018" />

        <CheckBox
            android:id="@+id/current_isCompleted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_completed"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/current_date"
            app:layout_constraintVertical_bias="0.088"
            tools:layout_editor_absoluteX="22dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>