<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundLight"
    android:fillViewport="false">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp"
        tools:context=".fragment.add.AddFragment">


        <EditText
            android:id="@+id/title"
            android:layout_width="0dp"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/task_name"
            android:background="@drawable/custom_input"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.458"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/description"
        android:background="@drawable/custom_input"
        android:layout_width="0dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:paddingTop="24dp"
        android:layout_height="151dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

        <CheckBox
            android:id="@+id/isCompleted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_completed"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dateButton"
            app:layout_constraintVertical_bias="0.88"
            tools:layout_editor_absoluteX="24dp" />

        <TextView
            android:id="@+id/date_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/isCompleted"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/dateButton"
            app:layout_constraintTop_toBottomOf="@+id/description"
            app:layout_constraintVertical_bias="0.75" />

        <ImageView
            android:id="@+id/dateButton"
            android:layout_width="65dp"
            android:layout_height="67dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/dateicon"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            android:text="@string/pick_a_date"
            app:layout_constraintBottom_toTopOf="@+id/dateButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.041"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>